# OpenCRG

./: .gitmodules  LICENSE  NOTICE  RELEASENOTES  antora-playbook-pr.yml  antora-playbook.yml  content_list.txt  create_content_list.py
.antora/: antora.yml
.github/workflows/: _build-specification.yml  antora-build-local.yml  ci-c-api.yml  ci-cmake-c-api-library.yml  ci-cmake-c-api.yml  main.yml  release-zip.yml
c-api/: .gitignore  CMakeLists.txt  compileScript.sh  readme.txt
c-api/baselib/: .gitignore  CMakeLists.txt  makefile
c-api/baselib/inc/: crgBaseLib.h  crgBaseLibPrivate.h
c-api/baselib/src/: crgContactPoint.c  crgEvalpk.c  crgEvaluv2xy.c  crgEvalxy2uv.c  crgEvalz.c  crgLoader.c  crgMgr.c  crgMsg.c  crgOptionMgmt.c  crgPortability.c  crgStatistics.c
c-api/cmake/: OpenCRGBuildDemoExecutable.cmake  OpenCRGCommonIncludes.cmake  OpenCRGCompilerSettings.cmake
c-api/demo/: CMakeLists.txt
c-api/demo/Curvature/: CMakeLists.txt  makefile
c-api/demo/Curvature/src/: main.c
c-api/demo/EvalOptions/: CMakeLists.txt  makefile
c-api/demo/EvalOptions/src/: main.c
c-api/demo/EvalXYnUV/: CMakeLists.txt  makefile
c-api/demo/EvalXYnUV/src/: main.c
c-api/demo/EvalZ/: CMakeLists.txt  makefile
c-api/demo/EvalZ/src/: main.c
c-api/demo/Reader/: CMakeLists.txt  makefile
c-api/demo/Reader/src/: main.c
c-api/demo/Simple/: CMakeLists.txt  makefile
c-api/demo/Simple/src/: main.c
c-api/test/: CMakeLists.txt
c-api/test/Dump/: CMakeLists.txt  makefile
c-api/test/Dump/src/: main.c
c-api/test/MemTest/: CMakeLists.txt  makefile
c-api/test/MemTest/src/: main.c
c-api/test/MultiCp/: CMakeLists.txt  makefile
c-api/test/MultiCp/src/: main.c
c-api/test/MultiRead/: CMakeLists.txt  makefile
c-api/test/MultiRead/src/: main.c
c-api/test/PerfTest/: CMakeLists.txt  makefile
c-api/test/PerfTest/src/: main.c
c-api/test/Scan/: CMakeLists.txt  makefile
c-api/test/Scan/src/: main.c
c-api/test/Verify/: CMakeLists.txt  makefile
c-api/test/Verify/src/: main.c
content/00_preface/: foreword.adoc
crg-bin/: belgian_block.crg
crg-txt/: fileref_mods.crg  fileref_opts.crg  handmade_straight.crg  handmade_straight_double.crg
doc/archived_doc_1_1_2/docsrc/: readme.txt
doc/archived_doc_1_1_2/docsrc/make/: Makefile
doc/specification/: OpenCRG_specification.adoc  OpenCRG_specification_1_2.adoc
doc/specification/0_resources/themes/html/: docinfo-footer.html
doc/specification/0_resources/themes/pdf/: asam.yml
doc/specification/2_Relations_to_other_standards/: 2_0_Relations_to_other_standards.adoc
doc/specification/3_Open_crg_data_format/: 3_4_7_Road_data.adoc
doc/specification/5_Using_the_OpenCRG_tools/: 5_08_Manipulating_OpenCRG_data.adoc
matlab/: crg_init.m  crg_intro.m  readme.md  readme.txt
matlab/demo/: crg_demo.m  crg_demo_belgian_block.m  crg_demo_convert2bin.m  crg_demo_convert2txt.m  crg_demo_country_road.m  crg_demo_gen_refline.m  crg_demo_gen_sl_mue.m  crg_demo_gen_sl_road.m  crg_demo_gen_sl_surf.m  crg_demo_gen_surface.m  crg_demo_gen_syntheticStraight.m  crg_demo_gen_target.m  crg_demo_map_transformation.m  crg_demo_scale_data.m
matlab/lib/: copy_ax2fig.m  crg_append.m  crg_b2z.m  crg_check.m  crg_check_curvature.m  crg_check_data.m  crg_check_head.m  crg_check_mods.m  crg_check_mpro.m  crg_check_opts.m  crg_check_single.m  crg_check_uv_descript.m  crg_check_wgs84.m  crg_cut_iuiv.m  crg_eval_enh2xyz.m  crg_eval_llh2xyz.m  crg_eval_u2crv.m  crg_eval_u2phi.m  crg_eval_uv2iuiv.m  crg_eval_uv2xy.m  crg_eval_uv2z.m  crg_eval_xy2uv.m  crg_eval_xy2z.m  crg_eval_xyz2enh.m  crg_eval_xyz2llh.m  crg_ext_banking.m  crg_ext_slope.m  crg_figure.m  crg_filter.m  crg_flip.m  crg_gen_csb2crg0.m  crg_gen_ppxy2phi.m  crg_gen_pxy2ppxy.m  crg_isequal.m  crg_limiter.m  crg_map_uv2uv.m  crg_map_xy2xy.m  crg_mods.m  crg_peakfinder.m  crg_perform2surface.m  (+66 more)
matlab/test/: crg_test_append.m  crg_test_continuesTrack.m  crg_test_curvature.m  crg_test_eval_uv2iuiv.m  crg_test_ext_sb.m  crg_test_filter.m  crg_test_gen_csb2crg0.m  crg_test_gen_road.m  crg_test_isequal.m  crg_test_limiter.m  crg_test_map_pro.m  crg_test_map_uv2uvAxy2xy.m  crg_test_options.m  crg_test_peakfinder.m  crg_test_rerender.m  readme.txt
